; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/QM/extr_qm_portal_fqr.c_aligned_int_from_ptr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/QM/extr_qm_portal_fqr.c_aligned_int_from_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_MIN_KERNEL_ADDRESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"%p is too low!\0A\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"Pointer %p is not 8-byte aligned!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @aligned_int_from_ptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @aligned_int_from_ptr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = ptrtoint i8* %4 to i64
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @VM_MIN_KERNEL_ADDRESS, align 8
  %8 = icmp uge i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @KASSERT(i32 %9, i8* %10)
  %12 = load i64, i64* @VM_MIN_KERNEL_ADDRESS, align 8
  %13 = load i64, i64* %3, align 8
  %14 = sub i64 %13, %12
  store i64 %14, i64* %3, align 8
  %15 = load i64, i64* %3, align 8
  %16 = and i64 %15, 7
  %17 = icmp eq i64 %16, 0
  %18 = zext i1 %17 to i32
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 @KASSERT(i32 %18, i8* %19)
  %21 = load i64, i64* %3, align 8
  %22 = lshr i64 %21, 3
  ret i64 %22
}

declare dso_local i32 @KASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
